Fixed the checkout gap thing

--- a/css/main.css
+++ b/css/main.css
@@ -1058,7 +1058,8 @@ option {
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
   flex-wrap: wrap;
-  margin: 0 -16px;
+  margin: 0 auto;
+  width: 95%;
 }
 
 .new-checkout-col-25 {
@@ -1083,10 +1084,9 @@ option {
 }
 
 .new-checkout-container {
-  background-color: #f2f2f2;
-  padding: 5px 20px 15px 20px;
-  border: 1px solid lightgrey;
-  border-radius: 3px;
+  padding: 5px 20px 15px 0px;
+  /* border: 1px solid lightgrey;
+  border-radius: 3px; */
 }
 
 input[type="text"] {
